# OOP1-ConsoleProject

./: CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h  Parser.h  input_output.cpp  input_output.h  main.cpp
AbstractClasses/: ArgumentCommand.cpp  ArgumentCommand.h  Command.cpp  Command.h  Option.h  OptionCommand.cpp  OptionCommand.h
ArgumentCommands/: EchoCommand.cpp  EchoCommand.h  PromptCommand.cpp  PromptCommand.h  RemoveCommand.cpp  RemoveCommand.h  TouchCommand.cpp  TouchCommand.h  TruncateCommand.cpp  TruncateCommand.h
Commands/: DateCommand.cpp  DateCommand.h  TimeCommand.cpp  TimeCommand.h
OptionCommands/: WC-cCommand.cpp  WC-cCommand.h  WC-wCommand.cpp  WC-wCommand.h  WCCommand.cpp  WCCommand.h
